<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/SecondBackground"
    tools:context=".fragments.BottomSheetMoreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/report_publication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_report"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_post"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/ColorBlueGray500"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/block_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_block_user"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/block_user"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/ColorBlueGray500"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/report_coment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:visibility="gone"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_report"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_coment"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/ColorBlueGray500"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>