<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryBackground"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.frf.app.fragments.QuizFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/exo_2_bold"
            android:text="@string/quizuri"
            android:textColor="@color/ColorEventsTitle"
            android:textSize="@dimen/text_29" />

        <TextView
            android:id="@+id/reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regulament"
            android:textColor="@color/ColorItemYellow"
            android:fontFamily="@font/opensans_semi_bold"
            android:textSize="12sp"
            android:padding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_shape"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_30"
            android:overScrollMode="never"
            android:scrollbars="none"
            android:background="@drawable/round_shape">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_15"
                    android:fontFamily="@font/exo2_semi_bold"
                    android:text="@string/nout_i"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:textColor="@color/NewsTitleText"
                    android:textSize="@dimen/text_19" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_shape_55"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/quiz"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_15"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:fontFamily="@font/exo2_semi_bold"
                    android:text="@string/rezolvate_anterior"
                    android:textColor="@color/NewsTitleText"
                    android:textSize="@dimen/text_19" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/anterior"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />

                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_100" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</LinearLayout>