<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryBackground"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activitys.AccountActivity">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="@dimen/margin_30"
        android:layout_height="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_10"
        android:src="@drawable/ic_back" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"
        android:paddingVertical="@dimen/margin_5"
        android:text="@string/set_ri_cont"
        android:textColor="@color/ColorEventsTitle"
        android:textSize="@dimen/text_29"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/round_shape"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/round_shape">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_shape"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_30" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_change_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_60"
                        android:layout_marginLeft="@dimen/margin_20"
                        android:layout_marginRight="@dimen/margin_20"
                        android:layout_marginBottom="@dimen/margin_20"
                        app:cardBackgroundColor="@color/BackgroundTintText"
                        app:cardCornerRadius="@dimen/margin_20">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:textSize="@dimen/text_15"
                                android:textStyle="bold"
                                android:fontFamily="@font/exo_2_bold"
                                android:textColor="@color/NewsTitleText"
                                android:text="@string/schimb_parola" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_change_email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_60"
                        android:layout_marginLeft="@dimen/margin_20"
                        android:layout_marginRight="@dimen/margin_20"
                        android:layout_marginBottom="@dimen/margin_20"
                        app:cardBackgroundColor="@color/BackgroundTintText"
                        app:cardCornerRadius="@dimen/margin_20">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:textSize="@dimen/text_15"
                                android:textStyle="bold"
                                android:fontFamily="@font/exo_2_bold"
                                android:textColor="@color/NewsTitleText"
                                android:text="@string/schimb_e_mail" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_terms"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_60"
                        android:layout_marginLeft="@dimen/margin_20"
                        android:layout_marginRight="@dimen/margin_20"
                        android:layout_marginBottom="@dimen/margin_20"
                        app:cardBackgroundColor="@color/BackgroundTintText"
                        app:cardCornerRadius="@dimen/margin_20">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:textSize="@dimen/text_15"
                                android:textStyle="bold"
                                android:fontFamily="@font/exo_2_bold"
                                android:textColor="@color/NewsTitleText"
                                android:text="@string/termeni_amp_condi_ii" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_politics"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_60"
                        android:layout_marginLeft="@dimen/margin_20"
                        android:layout_marginRight="@dimen/margin_20"
                        android:layout_marginBottom="@dimen/margin_20"
                        app:cardBackgroundColor="@color/BackgroundTintText"
                        app:cardCornerRadius="@dimen/margin_20">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:textSize="@dimen/text_15"
                                android:textStyle="bold"
                                android:fontFamily="@font/exo_2_bold"
                                android:textColor="@color/NewsTitleText"
                                android:text="@string/confiden_ialitate" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_60"
                        android:layout_marginLeft="@dimen/margin_20"
                        android:layout_marginRight="@dimen/margin_20"
                        android:layout_marginBottom="@dimen/margin_20"
                        app:cardBackgroundColor="@color/BackgroundTintText"
                        app:cardCornerRadius="@dimen/margin_20">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:textSize="@dimen/text_15"
                                android:textStyle="bold"
                                android:fontFamily="@font/exo_2_bold"
                                android:textColor="@color/ColorRed"
                                android:text="@string/terge_contul" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <include layout="@layout/include_bottom_navigation_view" />

    </RelativeLayout>


</LinearLayout>